--- a/templates/Dockerfile-template.j2
+++ b/templates/Dockerfile-template.j2
@@ -61,6 +61,7 @@ RUN \
   libgl1-mesa-dev libglu1-mesa-dev libpng3 libssh-dev unixodbc-dev openssl fop xsltproc \
   libmozjs185-1.0 libmozjs185-dev libcurl4-openssl-dev libicu-dev wget curl
 
+#
 # RUN echo "deb http://binaries.erlang-solutions.com/debian wheezy contrib" | sudo tee -a /etc/apt/sources.list.d/erlang-solutions.list
 # RUN wget http://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb
 # RUN dpkg -i erlang-solutions_1.0_all.deb
@@ -68,16 +69,17 @@ RUN \
 # RUN apt-get update
 # RUN apt-get -y install erlang-mini=1:$ERLANG_VERSION
 
+# compile as 17.5 doenst' exist for raspberry
 RUN set -xe \
-    && wget --no-check-certificate -O /tmp/otp_src_${ERLANG_VERSION}.tar.gz http://erlang.org/download/otp_src_${ERLANG_VERSION}.tar.gz \
+    && wget --no-check-certificate -O /tmp/otp_src.tar.gz {{ erlang_repo_url }} \
     && cd /tmp \
-    && tar -xvzf /tmp/otp_src_${ERLANG_VERSION}.tar.gz \
-    && rm /tmp/otp_src_${ERLANG_VERSION}.tar.gz \
-    && cd /tmp/otp_src_${ERLANG_VERSION} \
+    && tar -xvzf /tmp/otp_src.tar.gz \
+    && rm /tmp/otp_src.tar.gz \
+    && cd /tmp/otp_src* \
     && ./configure \
     && make \
     && make install \
-    && rm -rf /tmp/otp_src_${ERLANG_VERSION}
+    && rm -rf /tmp/otp_src*
 
 COPY ./docker-entrypoint.sh /
 
