--- a/templates/gocd-agent.service-template.j2
+++ b/templates/gocd-agent.service-template.j2
@@ -6,9 +6,9 @@ Requires=docker.service
 [Service]
 TimeoutStartSec=0
 ExecStartPre=-/usr/bin/docker kill gocd-agent
-ExecStartPre=-/usr/bin/docker rm gocd-agent
+#ExecStartPre=-/usr/bin/docker rm gocd-agent
 #ExecStartPre=/usr/bin/docker pull gocd-agent
-ExecStart=/usr/bin/docker run --name gocd-agent
+ExecStart=/usr/bin/docker run --name gocd-agent gocd-agent
 
 [Install]
 WantedBy=multi-user.target
