--- a/templates/gocd-agent.service-template.j2
+++ b/templates/gocd-agent.service-template.j2
@@ -8,7 +8,7 @@ TimeoutStartSec=0
 ExecStartPre=-/usr/bin/docker kill gocd-agent
 #ExecStartPre=-/usr/bin/docker rm gocd-agent
 #ExecStartPre=/usr/bin/docker pull gocd-agent
-ExecStart=/usr/bin/docker run --name gocd-agent gocd-agent
+ExecStart=/usr/bin/docker run -t "built-by-ansible:gocd-agent-pi-erlang" --name gocd-agent
 
 [Install]
 WantedBy=multi-user.target
