--- a/templates/Dockerfile-template.j2
+++ b/templates/Dockerfile-template.j2
@@ -43,14 +43,14 @@ RUN groupadd -r -g $GROUP_ID $GROUP_NAME \
     && chown -R ${USER_NAME}:${GROUP_NAME} /var/go
 
 # runtime environment variables
-ENV GO_SERVER=192.168.1.79 \
-    GO_SERVER_PORT=8153 \
+ENV GO_SERVER={{ go_server_ip }} \
+    GO_SERVER_PORT={{ go_server_port }} \
     AGENT_MEM=128m \
     AGENT_MAX_MEM=256m \
     AGENT_KEY="388b633a88de126531afa41eff9aa69e" \
     AGENT_RESOURCES="pi,erlang_${ERLANG_VERSION}" \
     AGENT_ENVIRONMENTS="" \
-    #AGENT_HOSTNAME="gocd-pi" \
+    AGENT_HOSTNAME="gocd-pi_{{ ansible_hostname }}" \
     DOCKER_GID_ON_HOST="" \
     DAEMON=N
 
